added conditional colouring to tables

--- a/codewars_filpill.ipynb
+++ b/codewars_filpill.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,12 @@
     "    t_horz_spacing = 1 #Horizontal Spacing between tables\n",
     "    title_format = workbook.add_format({'bold': True, 'font_size' : 20, 'fg_color' : '#76933C', 'font_color' : 'white' }) #Standardised Title Format for all tables\n",
     "    header_format = workbook.add_format({'bold' : True, 'font_size' : 12, 'text_wrap' : True}) #text-wrapping for table headers\n",
+    "\n",
+    "    # Rank Colouring\n",
+    "    white_format = workbook.add_format({'font_size' : 9,'bg_color' : '#e0e0de','font_color': 'black'})\n",
+    "    yellow_format = workbook.add_format({'font_size' : 9,'bg_color' : '#F4B831','font_color': 'white'})\n",
+    "    blue_format = workbook.add_format({'font_size' : 9,'bg_color' : '#3B7EBA','font_color': 'white'})\n",
+    "    purple_format = workbook.add_format({'font_size' : 9,'bg_color' : '#856DCC','font_color': 'white'})\n",
     "    \n",
     "    # Adding and changing active sheet\n",
     "    try:\n",
@@ -52,6 +58,24 @@
     "    #Writing in Cell Data and Merging Cells for Table Titles\n",
     "    data_table.to_excel(writer,sheet_name=sheet_name,startrow=startrow , startcol=startcol, index=False, header=False)\n",
     "    worksheet.merge_range(startrow-2, startcol,startrow-2,data_table.shape[1] + startcol -1, title_str,title_format) #writing in title formatting above table\n",
+    "\n",
+    "    #Conditional Formatting For Colors of Ranks\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': 'white', 'format': white_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '8 kyu', 'format': white_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '7 kyu', 'format': white_format}  )\n",
+    "\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': 'yellow', 'format': yellow_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '6 kyu', 'format': yellow_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '5 kyu', 'format': yellow_format}  )\n",
+    "\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': 'blue', 'format': blue_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '4 kyu', 'format': blue_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '3 kyu', 'format': blue_format}  )\n",
+    "\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': 'purple', 'format': purple_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '2 kyu', 'format': purple_format}  )\n",
+    "    worksheet.conditional_format(startrow,startcol + data_table.shape[1]-2,data_table.shape[0]+startrow-1,data_table.shape[1]+ startcol -1,{'type':'text', 'criteria': 'containing', 'value': '1 kyu', 'format': purple_format}  )\n",
+    "\n",
     "\n",
     "    #Column settings to use in add table function\n",
     "    column_settings = [{'header' : column} for column in data_table.columns]\n",
@@ -697,9 +721,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Kata ID</th>\n",
+       "      <th>Kata Name</th>\n",
+       "      <th>Languages</th>\n",
+       "      <th>Completed Date</th>\n",
+       "      <th>Completion Period</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Total Attempts</th>\n",
+       "      <th>Total Completed</th>\n",
+       "      <th>Tags</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5324945e2ece5e1f32000370</td>\n",
+       "      <td>Sum Strings as Numbers</td>\n",
+       "      <td>[python]</td>\n",
+       "      <td>2022-11-11</td>\n",
+       "      <td>Nov-22</td>\n",
+       "      <td>algorithms</td>\n",
+       "      <td>490630</td>\n",
+       "      <td>28848</td>\n",
+       "      <td>[Strings, Big Integers, Algorithms]</td>\n",
+       "      <td>4 kyu</td>\n",
+       "      <td>blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>521c2db8ddc89b9b7a0000c1</td>\n",
+       "      <td>Snail</td>\n",
+       "      <td>[python]</td>\n",
+       "      <td>2022-11-09</td>\n",
+       "      <td>Nov-22</td>\n",
+       "      <td>algorithms</td>\n",
+       "      <td>401079</td>\n",
+       "      <td>53787</td>\n",
+       "      <td>[Arrays, Algorithms]</td>\n",
+       "      <td>4 kyu</td>\n",
+       "      <td>blue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Kata ID               Kata Name Languages Completed Date  \\\n",
+       "0  5324945e2ece5e1f32000370  Sum Strings as Numbers  [python]     2022-11-11   \n",
+       "1  521c2db8ddc89b9b7a0000c1                   Snail  [python]     2022-11-09   \n",
+       "\n",
+       "  Completion Period    Category Total Attempts Total Completed  \\\n",
+       "0            Nov-22  algorithms         490630           28848   \n",
+       "1            Nov-22  algorithms         401079           53787   \n",
+       "\n",
+       "                                  Tags   Rank Color  \n",
+       "0  [Strings, Big Integers, Algorithms]  4 kyu  blue  \n",
+       "1                 [Arrays, Algorithms]  4 kyu  blue  "
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_profile.rename(columns={ 'username':'Username',\n",
     "                           'honor':'Honor',\n",
@@ -720,8 +830,23 @@
     "                           'tags':'Tags',\n",
     "                           'rank.name':'Rank',\n",
     "                           'rank.color':'Color'\n",
-    "                           },inplace=True)"
+    "                           },inplace=True)\n",
+    "df_kata_combined.head(2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -732,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
