added tableau viz

--- a/codewars_filpill.ipynb
+++ b/codewars_filpill.ipynb
@@ -544,8 +544,8 @@
        "      <th>0</th>\n",
        "      <td>5506b230a11c0aeab3000c1f</td>\n",
        "      <td>reference</td>\n",
-       "      <td>76213</td>\n",
-       "      <td>22216</td>\n",
+       "      <td>76219</td>\n",
+       "      <td>22219</td>\n",
        "      <td>[Fundamentals]</td>\n",
        "      <td>7 kyu</td>\n",
        "      <td>white</td>\n",
@@ -554,8 +554,8 @@
        "      <th>0</th>\n",
        "      <td>53f0f358b9cb376eca001079</td>\n",
        "      <td>reference</td>\n",
-       "      <td>65687</td>\n",
-       "      <td>27444</td>\n",
+       "      <td>65697</td>\n",
+       "      <td>27450</td>\n",
        "      <td>[Fundamentals]</td>\n",
        "      <td>8 kyu</td>\n",
        "      <td>white</td>\n",
@@ -566,8 +566,8 @@
       ],
       "text/plain": [
        "                         id   category totalAttempts totalCompleted  \\\n",
-       "0  5506b230a11c0aeab3000c1f  reference         76213          22216   \n",
-       "0  53f0f358b9cb376eca001079  reference         65687          27444   \n",
+       "0  5506b230a11c0aeab3000c1f  reference         76219          22219   \n",
+       "0  53f0f358b9cb376eca001079  reference         65697          27450   \n",
        "\n",
        "             tags rank.name rank.color  \n",
        "0  [Fundamentals]     7 kyu      white  \n",
@@ -642,8 +642,8 @@
        "      <td>2022-12-13</td>\n",
        "      <td>Dec-22</td>\n",
        "      <td>reference</td>\n",
-       "      <td>76213</td>\n",
-       "      <td>22216</td>\n",
+       "      <td>76219</td>\n",
+       "      <td>22219</td>\n",
        "      <td>[Fundamentals]</td>\n",
        "      <td>7 kyu</td>\n",
        "      <td>white</td>\n",
@@ -656,8 +656,8 @@
        "      <td>2022-12-13</td>\n",
        "      <td>Dec-22</td>\n",
        "      <td>reference</td>\n",
-       "      <td>65687</td>\n",
-       "      <td>27444</td>\n",
+       "      <td>65697</td>\n",
+       "      <td>27450</td>\n",
        "      <td>[Fundamentals]</td>\n",
        "      <td>8 kyu</td>\n",
        "      <td>white</td>\n",
@@ -672,8 +672,8 @@
        "1  53f0f358b9cb376eca001079  Regular Ball Super Ball           [python]   \n",
        "\n",
        "  completedAt Completion Period   category totalAttempts totalCompleted  \\\n",
-       "0  2022-12-13            Dec-22  reference         76213          22216   \n",
-       "1  2022-12-13            Dec-22  reference         65687          27444   \n",
+       "0  2022-12-13            Dec-22  reference         76219          22219   \n",
+       "1  2022-12-13            Dec-22  reference         65697          27450   \n",
        "\n",
        "             tags rank.name rank.color  \n",
        "0  [Fundamentals]     7 kyu      white  \n",
@@ -745,8 +745,8 @@
        "      <td>2022-12-13</td>\n",
        "      <td>Dec-22</td>\n",
        "      <td>reference</td>\n",
-       "      <td>76213</td>\n",
-       "      <td>22216</td>\n",
+       "      <td>76219</td>\n",
+       "      <td>22219</td>\n",
        "      <td>[Fundamentals]</td>\n",
        "      <td>7 kyu</td>\n",
        "      <td>white</td>\n",
@@ -759,8 +759,8 @@
        "      <td>2022-12-13</td>\n",
        "      <td>Dec-22</td>\n",
        "      <td>reference</td>\n",
-       "      <td>65687</td>\n",
-       "      <td>27444</td>\n",
+       "      <td>65697</td>\n",
+       "      <td>27450</td>\n",
        "      <td>[Fundamentals]</td>\n",
        "      <td>8 kyu</td>\n",
        "      <td>white</td>\n",
@@ -775,8 +775,8 @@
        "1  53f0f358b9cb376eca001079  Regular Ball Super Ball  [python]     2022-12-13   \n",
        "\n",
        "  Completion Period   Category Total Attempts Total Completed            Tags  \\\n",
-       "0            Dec-22  reference          76213           22216  [Fundamentals]   \n",
-       "1            Dec-22  reference          65687           27444  [Fundamentals]   \n",
+       "0            Dec-22  reference          76219           22219  [Fundamentals]   \n",
+       "1            Dec-22  reference          65697           27450  [Fundamentals]   \n",
        "\n",
        "    Rank  Color  \n",
        "0  7 kyu  white  \n",
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "1       sql     90"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,8 +1205,8 @@
     "\n",
     "# Creating seperate data frame for unpacking the programming languages\n",
     "df_lang = pd.DataFrame(data=lang_comp,columns=['Kata ID','Completion Period','Languages'])\n",
-    "for i in range(df_lang.shape[0]): \n",
-    "   df_lang.loc[i,'Completion Period']  = df_lang.loc[i,'Completion Period'].strftime(\"%b-%y\")\n",
+    "df_lang.to_csv('csv/language_tableau.csv')\n",
+    "\n",
     "   \n",
     "# Applying Groupby to count number of kata completions split by language\n",
     "df_lang = df_lang.groupby(['Languages'])['Languages'].count().reset_index(name='Count')\n",
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
        "17         Fundamentals    292"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,8 +1336,7 @@
     "\n",
     "# Creating seperate data frame for unpacking the tags\n",
     "df_tags = pd.DataFrame(data=tag_list,columns=['Kata ID','Completion Period','Tags'])\n",
-    "for i in range(df_tags.shape[0]): \n",
-    "   df_tags.loc[i,'Completion Period']  = df_tags.loc[i,'Completion Period'].strftime(\"%b-%y\")\n",
+    "df_tags.to_csv('csv/tags_tableau.csv')\n",
     "   \n",
     "# Applying Groupby to count number of kata completions split by language\n",
     "df_tags = df_tags.groupby(['Tags'])['Tags'].count().reset_index(name='Count')\n",
@@ -1355,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
